--- a/student_review_system/src/main/resources/templates/index.html
+++ b/student_review_system/src/main/resources/templates/index.html
@@ -25,7 +25,11 @@
         	</div>
         	<div class="loginContain">
         		<form action="" method="post">
+
 		            <div class="loginInfo">
+						<div id="Sname">
+							<h2>Spoc 学习系统</h2>
+						</div>
 		            	<div class="title">
 		            		<span id="title">Login</span>
 		            	</div>
